renamed js file to troubleshoot deployed error

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
-<script src="./script.js"></script>
+<script src="./scripta.js"></script>
 
 
 </body>
